2011-08-22  Juri Linkov  <juri@jurta.org>

	* progmodes/compile.el (compilation-mode-font-lock-keywords):
	Revert regexp that highlights output switches to its old
	pre-2010-10-28 value and remove one `?' from it (bug#9319).

	* progmodes/grep.el (grep-process-setup): Use `buffer-modified-p'
	to check for empty output (bug#9226).

2011-08-22  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/scheme.el (scheme-mode-syntax-table): Don't use
	symbol-constituent as the default, as that stops font-lock from
	working properly (Bug#8843).

2011-08-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (smtpmail-via-smtp): Only bind
	`coding-system-for-*' around the process open call to avoid
	auth-source side effects.
	(smtpmail-try-auth-methods): Expand the secret password.
	(smtpmail-query-smtp-server): Allow `quit'-ing out in case the
	probe hangs.

2011-08-21  Chong Yidong  <cyd@stupidchicken.com>

	* term.el (term-mouse-paste): Yank primary selection (Bug#6845).

	* emacs-lisp/find-func.el (find-function-noselect): New arg
	lisp-only.

	* emacs-lisp/edebug.el (edebug-instrument-function): Use it to
	signal an error for built-in functions (Bug#6664).

2011-08-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (smtpmail-smtp-user): New variable.
	(smtpmail-try-auth-methods): Use it.

2011-08-21  Chong Yidong  <cyd@stupidchicken.com>

	* font-lock.el (font-lock-fontify-region)
	(font-lock-unfontify-region, font-lock-default-fontify-buffer)
	(font-lock-default-unfontify-buffer)
	(font-lock-default-fontify-region)
	(font-lock-default-unfontify-region): Add docstrings (Bug#8624).

	* progmodes/compile.el (compilation-error-properties): Fix
	confusion between file struct and message struct (Bug#9319).
	(compilation-error-regexp-alist-alist): Fix 2011-05-09 change to
	`ant' regexp.

	* net/browse-url.el (browse-url-firefox): Don't call
	browse-url-firefox-sentinel unless using -remote (Bug#9328).

2011-08-20  Glenn Morris  <rgm@gnu.org>
